feat: add album
